# Mooring

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SCOPE.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  detector_proposal.yml  false_positive.yml
.github/workflows/: build.yml  codeql.yml
docs/: architecture.md  detector-reference.md
examples/: CMakeLists.txt  scan_self.cpp
include/mooring/: detectors.h  mooring.h  result.h
include/mooring/internal/: module_inventory.h  pe_image.h  strings.h
src/core/: module_inventory.cpp  pe_image.cpp  result.cpp  strings.cpp
src/detectors/: hardware_breakpoint.cpp  hidden_module.cpp  iat_hook.cpp  inline_hook.cpp  thread_origin.cpp
tests/: CMakeLists.txt
